# cidacs-curadoria

./: .pyproject.toml.swp  .pyproject_LOCAL_347.toml.swp  .pyproject_REMOTE_347.toml.swp  README.md  config.yaml  pyproject.toml  pyproject_BACKUP_347.toml  pyproject_LOCAL_347.toml  readme.md
docs/: index.html
docs/resources/: extra.css
docs/resources/bkp/: index - Copia - Copia.html
src/core/: core.py
src/curadoria.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/descritivas/: desc.py
src/dicionarios/: disc.py
src/utils/: logs.py
src/validacao/: valid.py
src/variaveis/: var.py
tests/resources/: SIM_arquivo-teste-historicidade123123.csv  SINASC_arquivo-teste-historicidade123123.csv  config-pbf_familia.yaml  config-pbf_pessoa.yaml  config-sifilis.yaml  config-sim.yaml  config-sinan_hans.yaml  config-sinasc.yaml  dic_sinasc_v3.ods  dicionario_sim_2000_a_2015 - teste.ods  dicionario_sim_2000_a_2015.ods
